# SIN-Code-Orchestration

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  USAGE.md
src/sin_code_orchestration/: __init__.doc.md  __init__.py  agent.doc.md  agent.py  ca_mcp.py  cli.py  context.doc.md  context.py  executor.doc.md  executor.py  mcp_server.doc.md  mcp_server.py  orchestrator.doc.md  orchestrator.py  orchestrator.py.doc.md  role.doc.md  role.py  roles.py  shared_context.py  task.doc.md  task.py  verifier.doc.md  verifier.py  workflow.doc.md  workflow.py  workflow.py.doc.md
tests/: test_ca_mcp.py  test_edge_cases.py  test_orchestration.py  test_orchestration_security.py  test_orchestrator.py
