[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-code-orchestration"
version = "0.1.0"
description = "Advanced Multi-Agent Orchestration with Context-Aware MCP"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "redis>=5.0",
    "msgspec>=0.18",
    "mcp>=1.0.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
sin-orch = "sin_code_orchestration.cli:app"

[project.entry-points."mcp.server"]
sin-orch = "sin_code_orchestration.ca_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]
